// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Link Basic 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c1::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c3:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3:visited,
.c3:active {
  color: #009D00;
}

<p
  className="c0 c1"
>
  <span
    className="c2"
  >
    <a
      className="c3"
      onBlur={[Function]}
      onFocus={[Function]}
      rel={null}
    >
      Link
    </a>
  </span>
</p>
`;

exports[`Storyshots Components/Link With Button 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c1::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c3::-moz-focus-inner {
  border-style: none;
}

.c3:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3:visited,
.c3:active {
  color: #009D00;
}

<p
  className="c0 c1"
>
  <span
    className="c2"
  >
    <button
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      rel={null}
    >
      I am a button
    </button>
  </span>
</p>
`;

exports[`Storyshots Components/Link With Colors 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c2::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c4:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:visited,
.c4:active {
  color: #009D00;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #0E24C4;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c6:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:visited,
.c6:active {
  color: #0E24C4;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #F03D3D;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c7:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:visited,
.c7:active {
  color: #F03D3D;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: inherit;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c8:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8:visited,
.c8:active {
  color: inherit;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: orange;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c9:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:visited,
.c9:active {
  color: orange;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 8px;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Brand
      </a>
    </span>
  </p>
  <div
    className="c5"
  />
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c6"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Brand 2
      </a>
    </span>
  </p>
  <div
    className="c5"
  />
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c7"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Error
      </a>
    </span>
  </p>
  <div
    className="c5"
  />
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c8"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Inherit
      </a>
    </span>
  </p>
  <div
    className="c5"
  />
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c9"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Custom
      </a>
    </span>
  </p>
</div>
`;

exports[`Storyshots Components/Link With Router 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c1::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c3:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3:visited,
.c3:active {
  color: #009D00;
}

<p
  className="c0 c1"
>
  <span
    className="c2"
  >
    <a
      className="c3"
      href="/"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      rel={null}
    >
      React Router Link
    </a>
  </span>
</p>
`;

exports[`Storyshots Components/Link With Typical Usage 1`] = `
.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #F3F4FC;
  padding: 32px;
  max-width: 420px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c8 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5195rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3865rem);
  -ms-transform: translateY(0.3865rem);
  transform: translateY(0.3865rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.873rem;
}

.c11 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c13 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.26584375rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32965625rem);
  -ms-transform: translateY(0.32965625rem);
  transform: translateY(0.32965625rem);
  text-align: initial;
}

.c13::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7593125rem;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.019500000000000003rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.015843750000000004rem;
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c17 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17 *,
.c17 *::before,
.c17 *::after {
  box-sizing: border-box;
}

.c17:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:visited,
.c17:active {
  color: #009D00;
}

.c18 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: inherit;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18 *,
.c18 *::before,
.c18 *::after {
  box-sizing: border-box;
}

.c18:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:visited,
.c18:active {
  color: inherit;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 8px;
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c16 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 16px;
}

.c16 *,
.c16 *::before,
.c16 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <h2
            className="c7 c8"
          >
            <span
              className="c9"
            >
              Typical Usage
            </span>
          </h2>
        </div>
      </div>
      <div
        className="c10"
      >
        <p
          className="c7 c11"
        >
          <span
            className="c12"
          >
            Links are typically used in one of the following 3 ways:
          </span>
        </p>
      </div>
      <div
        className="c10"
      >
        <span
          className="c7 c13"
        >
          <span
            className="c14"
          >
            Standalone
          </span>
        </span>
        <div
          className="c15"
        />
        <p
          className="c7 c11"
        >
          <span
            className="c12"
          >
            Use block elements, like Text, to create a standalone link.
          </span>
        </p>
        <div
          className="c16"
        />
        <p
          className="c7 c11"
        >
          <span
            className="c12"
          >
            <a
              className="c17"
              href="https://acme.co"
              onBlur={[Function]}
              onFocus={[Function]}
              rel={null}
            >
              Privacy Policy
            </a>
          </span>
        </p>
      </div>
      <div
        className="c10"
      >
        <span
          className="c7 c13"
        >
          <span
            className="c14"
          >
            Inline
          </span>
        </span>
        <div
          className="c15"
        />
        <p
          className="c7 c11"
        >
          <span
            className="c12"
          >
            Create an inline 
            <a
              className="c17"
              href="https://acme.co"
              onBlur={[Function]}
              onFocus={[Function]}
              rel={null}
            >
              link
            </a>
             by adding it within a body of text.
          </span>
        </p>
      </div>
      <div
        className="c10"
      >
        <span
          className="c7 c13"
        >
          <span
            className="c14"
          >
            Subtle
          </span>
        </span>
        <div
          className="c15"
        />
        <p
          className="c7 c11"
        >
          <span
            className="c12"
          >
            A subtle
             
            <a
              className="c18"
              href="https://acme.co"
              onBlur={[Function]}
              onFocus={[Function]}
              rel={null}
            >
              link
            </a>
             
            matches the style of the surrounding text. You can set the color prop to 
            <i>
              inherit
            </i>
             to create a subtle link.
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Link With Underline 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c2::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c7:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:visited,
.c7:active {
  color: #009D00;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c4:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited,
.c4:active {
  color: #009D00;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  color: #009D00;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c6:focus {
  outline: none;
  outline-offset: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6:visited,
.c6:active {
  color: #009D00;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 8px;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        None
      </a>
    </span>
  </p>
  <div
    className="c5"
  />
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c6"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Hover
      </a>
    </span>
  </p>
  <div
    className="c5"
  />
  <p
    className="c1 c2"
  >
    <span
      className="c3"
    >
      <a
        className="c7"
        onBlur={[Function]}
        onFocus={[Function]}
        rel={null}
      >
        Always
      </a>
    </span>
  </p>
</div>
`;
